Fix sidebar background on mobile screens.

--- a/src/index.css
+++ b/src/index.css
@@ -220,11 +220,11 @@
 @layer utilities {
 }
 
-@layer base {
-  * {
-    @apply border-border outline-ring/50;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
-}
+/* @layer base { */
+/*   * { */
+/*     @apply border-border outline-ring/50; */
+/*   } */
+/*   body { */
+/*     @apply bg-background text-foreground; */
+/*   } */
+/* } */
